--- a/cadastro.html
+++ b/cadastro.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -39,17 +39,17 @@
                 <div class="w3-container w3-blue w3-round-xlarge" style="width:1%">1%</div>
             </div>
             <br>
-            <label for="">E-mail</label>
+            <label>E-mail</label>
             <input type="email" placeholder="user@user"><br><br>
-            <label for="">Senha</label>
+            <label>Senha</label>
             <input type="password" placeholder="password"><br><br>
-            <label for="">Nome</label>
+            <label>Nome</label>
             <input type="text" placeholder="Nome"><br><br>
-            <label for="">Idade</label>
+            <label>Idade</label>
             <input type="number" placeholder="Idade"><br><br>
-            <label for="">Data de nascimento</label>
+            <label>Data de nascimento</label>
             <input type="date"><br><br>
-            <label for="">Estado</label>
+            <label>Estado</label>
             <input type="text" placeholder="Estado">
             <br><br>
             <div style="display:flex;text-align:center;">
