--- a/cadastro2.html
+++ b/cadastro2.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -39,15 +39,15 @@
                 <div class="w3-container w3-blue w3-round-xlarge" style="width:53%">53%</div>
             </div>
             <br>
-            <label for="">Escolaridade</label>
+            <label>Escolaridade</label>
             <input type="text" placeholder="Série"><br><br>
-            <label for="">Instituição</label>
+            <label>Instituição</label>
             <input type="text" placeholder="Nome da instituição"><br><br>
-            <label for="">Curso</label>
+            <label>Curso</label>
             <input type="text" placeholder="Nome do curso"><br><br>
-            <label for="">Cidade</label>
+            <label>Cidade</label>
             <input type="text" placeholder="Cidade"><br><br>
-            <label for="">Estado civil</label>
+            <label>Estado civil</label>
             <input type="text" placeholder="Ex: solteiro, casado, etc."><br><br>
             <br><br>
             <div style="display:flex;text-align:center;">
