--- a/cadastro3.html
+++ b/cadastro3.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -39,15 +39,15 @@
                 <div class="w3-container w3-blue w3-round-xlarge" style="width:98%">98%</div>
             </div>
             <br>
-            <label for="">Apelido</label>
+            <label>Apelido</label>
             <input type="text" placeholder="Apelido"><br><br>
-            <label for="">Turma</label>
+            <label>Turma</label>
             <input type="text" placeholder="Turma"><br><br>
-            <label for="">Sexo</label>
+            <label>Sexo</label>
             <input type="text" placeholder="M/F/T/outros"><br><br>
-            <label for="">Matéria preferida</label>
+            <label>Matéria preferida</label>
             <input type="text" placeholder="Nome da matéria"><br><br>
-            <label for="">Universidade dos sonhos</label>
+            <label>Universidade dos sonhos</label>
             <input type="text" placeholder="Nome do curso"><br><br>
             <br><br>
             <div style="display:flex;text-align:center;">
