--- a/hora.html
+++ b/hora.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -36,7 +36,7 @@
         <div class="corpo">
             <br><h2 style="text-align:center;">Cronograma semanal</h2><br>
             <table id="lugares">
-                <caption><h2>Manhã</h2></caption><br>
+                <caption><h2>Manhã</h2></caption>
                 <thead>
                     <tr><!--Cabeçalho-->
                         <td class="dia">Seg</td>
@@ -88,8 +88,8 @@
                 </tbody>
             </table>
             <br><br>
-            <table id="lugares">
-                <caption><h2>Tarde</h2></caption><br>
+            <table id="lugares2">
+                <caption><h2>Tarde</h2></caption>
                 <thead>
                     <tr><!--Cabeçalho-->
                         <td class="dia">Seg</td>
