--- a/matedit.html
+++ b/matedit.html
@@ -13,7 +13,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -38,7 +38,7 @@
             <h2 style="text-align:center">--</h2>
 
             <h2>Frequência</h2>
-            <label for="">Registre faltas</label>
+            <label>Registre faltas</label>
             <input type="date" name="" id="">
             <br><br>
             <div class="w3-light-grey w3-round-xlarge">
@@ -48,25 +48,25 @@
             <h2>Dados</h2>
             <div>
                 <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
-                    <label for="">Nome</label>
+                    <label>Nome</label>
                     <input type="text">
                 </div>
             </div>
             <div>
                 <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
-                    <label for="">Sigla</label>
+                    <label>Sigla</label>
                     <input type="text">
                 </div>
             </div>
             <div>
                 <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
-                    <label for="">Professor(a)</label>
+                    <label>Professor(a)</label>
                     <input type="text">
                 </div>
             </div>
             <div>
                 <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
-                    <label for="">Sala</label>
+                    <label>Sala</label>
                     <input type="text">
                 </div>
             </div>
