--- a/newt.html
+++ b/newt.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -36,7 +36,7 @@
         <div class="corpo">
             <div style="margin-left:15%; margin-right:15%">
                 <div class="column" style="background-color:lightgray;width:100%;height:370px">
-                    <label for="">Título</label>
+                    <label>Título</label>
                     <input type="text" placeholder="Título da tarefa">
                     <br><br>
                     <textarea name="descricao" id="desc" cols="30" rows="10"></textarea>
