--- a/cadastro.html
+++ b/cadastro.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -34,9 +34,9 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
-            <h2 style="text-align:center">Cadastro</h2>
+            <h2 class="h2c">Cadastro</h2>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:1%">1%</div>
+                <div class="w3-container w3-blue w3-round-xlarge barc">1%</div>
             </div>
             <br>
             <label>E-mail</label>
@@ -52,12 +52,12 @@
             <label>Estado</label>
             <input type="text" placeholder="Estado">
             <br><br>
-            <div style="display:flex;text-align:center;">
+            <div class="doblebut">
                 <div>
-                    <a href="cadastro2.html" class="w3-btn" style="background-color:#084B60;color:white;">Usar a conta Google</a>
+                    <a href="cadastro2.html" class="w3-btn butesc">Usar a conta Google</a>
                 </div>
                 <div>
-                    <a href="cadastro2.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Continuar</a>
+                    <a href="cadastro2.html" class="w3-btn butcla">Continuar</a>
                 </div>
             </div>
         </div>
