--- a/cadastro3.html
+++ b/cadastro3.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -34,9 +34,9 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
-            <h2 style="text-align:center">Cadastro</h2>
+            <h2 class="h2c">Cadastro</h2>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:98%">98%</div>
+                <div class="w3-container w3-blue w3-round-xlarge barc">98%</div>
             </div>
             <br>
             <label>Apelido</label>
@@ -50,9 +50,9 @@
             <label>Universidade dos sonhos</label>
             <input type="text" placeholder="Nome do curso"><br><br>
             <br><br>
-            <div style="display:flex;text-align:center;">
+            <div class="doblebut">
                 <div>
-                    <a href="mensagem.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Finalizar</a>
+                    <a href="mensagem.html" class="w3-btn butcla">Finalizar</a>
                 </div>
             </div>
         </div>
