--- a/hora.html
+++ b/hora.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -34,7 +34,7 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
-            <br><h2 style="text-align:center;">Cronograma semanal</h2><br>
+            <br><h2 class="h2c">Cronograma semanal</h2><br>
             <table id="lugares">
                 <caption><h2>Manhã</h2></caption>
                 <thead>
