--- a/lista.html
+++ b/lista.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -34,9 +34,9 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
-            <h2 style="text-align:center;font-family: sans-serif;">Minhas disciplinas</h2><br>
+            <h2 class="h2c">Minhas disciplinas</h2><br>
             <div>
-                <div><a href="mt3.html"><div class="column" style="background-color:#81BEF7;width:100%;">
+                <div><a href="mt3.html"><div class="column dados">
                         <h2>Matemática 3</h2>
                         <p>(Mat3)</p>
                         <p>Prof: Aline Macedo</p>
@@ -45,7 +45,7 @@
                     <br><br>
             </div>
             <div>
-                <div><a href="es.html"><div class="column" style="background-color:#81BEF7;width:100%;">
+                <div><a href="es.html"><div class="column dados">
                         <h2>Engenharia de Software</h2>
                         <p>(ES)</p>
                         <p>Prof: Tiago Telecken</p>
@@ -54,7 +54,7 @@
                     <br><br>
             </div>
             <div>
-                <div><a href="f4.html"><div class="column" style="background-color:#81BEF7;width:100%;">
+                <div><a href="f4.html"><div class="column dados">
                         <h2>Física 4</h2>
                         <p>(Fis4)</p>
                         <p>Prof: Camila Gomes</p>
@@ -63,7 +63,7 @@
                     <br><br>
             </div>
             <div>
-                <div><a href="bd.html"><div class="column" style="background-color:#81BEF7;width:100%;">
+                <div><a href="bd.html"><div class="column dados">
                         <h2>Banco de Dados</h2>
                         <p>(BD)</p>
                         <p>Prof: Tiago Moraes</p>
@@ -72,7 +72,7 @@
                     <br><br>
             </div>
         </div>
-        <div style="text-align:center;font-family: sans-serif;"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Adicionar Matéria</a></div>
+        <div class="otobut"><a href="matedit.html" class="w3-btn">Adicionar Matéria</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
