--- a/matedit.html
+++ b/matedit.html
@@ -13,7 +13,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -35,44 +35,44 @@
         </div>
         <!--corpo da home-->
         <div class="corpo w3-container">
-            <h2 style="text-align:center">--</h2>
+            <h2 class="h2c">--</h2>
 
             <h2>Frequência</h2>
             <label>Registre faltas</label>
             <input type="date" name="" id="">
             <br><br>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:100%">.</div>
+                <div class="w3-container w3-blue w3-round-xlarge o">.</div>
             </div>
             <br>
             <h2>Dados</h2>
             <div>
-                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                <div class="column c2 discnome">
                     <label>Nome</label>
                     <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                <div class="column c2 discsigla">
                     <label>Sigla</label>
                     <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                <div class="column c2 discprof">
                     <label>Professor(a)</label>
                     <input type="text">
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:60px;">
+                <div class="column c2 discsala">
                     <label>Sala</label>
                     <input type="text">
                 </div>
             </div>
         </div>
         <br>
-        <div style="text-align:center"><a href="lista.html" class="w3-btn" style="background-color:#084B60; color:white">Salvar</a></div>
+        <div class="ootobut"><a href="lista.html" class="w3-btn">Salvar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
