--- a/material.html
+++ b/material.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -34,8 +34,8 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
-            <h2 style="text-align:center">Minha galeria</h2>
-            <div class="row2" style="margin-left:5%; margin-right:5%">
+            <h2 class="hsc">Minha galeria</h2>
+            <div class="row2">
                 <div class="column2">
                     <h2>Minhas matérias</h2>
                     <p>Veja aqui suas matérias</p>
@@ -66,12 +66,12 @@
                 </div>
             </div>
             <br>
-            <div style="display:flex;text-align:center;">
+            <div class="butf">
                 <div>
                     <a href="tarefas.html" class="w3-btn" style="background-color:#084B60;color:white;">Cancelar</a>
                 </div>
                 <div>
-                    <a href="tarefas.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Salvar</a>
+                    <a href="tarefas.html" class="w3-btn ootobut">Salvar</a>
                 </div>
             </div>
         </div>
