--- a/perfil.html
+++ b/perfil.html
@@ -36,9 +36,9 @@
         <div class="corpo">
             <br><br>
             <div>
-                <div class="column discsigla" style="background-color:#084B60;text-align:left;height:270px;margin-left:25%; margin-right:25%">
+                <div class="column discsigla mn">
                     <center>
-                        <img src="pict/icon.png" alt="" style= "width:55%;height:55%">
+                        <img src="pict/icon.png" alt="logo" class="cinco">
                     </center>
                     </div>
                     <center>
@@ -49,12 +49,12 @@
                         <label for="">Password</label>
                         <input type="password" placeholder="password">
                         <br>
-                        <div style="display:flex;text-align:center;">
+                        <div class="txt">
                             <div>
-                                <a href="perfilp.html" class="w3-btn" style="background-color:#084B60;color:white;">Entrar</a>
+                                <a href="perfilp.html" class="w3-btn butesc">Entrar</a>
                             </div>
                             <div>
-                                <a href="cadastro.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Cadastre-se</a>
+                                <a href="cadastro.html" class="w3-btn butcla">Cadastre-se</a>
                             </div>
                         </div>
                     </center>
