--- a/perfilp.html
+++ b/perfilp.html
@@ -13,7 +13,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -34,106 +34,106 @@
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
         </div>
         <!--corpo da home-->
-        <div class="corpo w3-container">
-            <h2 style="text-align:center">Minha conta</h2>
+        <div class="corpo w3-container mn">
+            <h2 class="h2c">Minha conta</h2>
             <h2>Dados</h2>
             <div>
-                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discnome">
                     <h3>E-mail</h3>
                     <h4>user@user</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsigla">
                     <h3>Nome</h3>
                     <h4>User</h4>
                 </div>
             </div>
             <div>
-                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discprof">
                     <h3>Idade</h3>
                     <h4>00</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Data de nascimento</h3>
                     <h4>dd/mm/aaaa</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Estado</h3>
                     <h4>UF</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Escolaridade</h3>
                     <h4>X série</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Instituição</h3>
                     <h4>xoxo</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Curso</h3>
                     <h4>Informática</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Estado civil</h3>
                     <h4>solteiro</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Apelido</h3>
                     <h4>User</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Turma</h3>
                     <h4>0X</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Sexo</h3>
                     <h4>Undefined</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Matéria preferida</h3>
                     <h4>xoxoxoxo</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Universidade dos sonhos</h3>
                     <h4>Animação</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <a href="progresso.html"><h2>Meu progresso</h2></a>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <a href="material.html"><h2>Meu material</h2></a>
                 </div>
             </div>
         </div>
         <br>
-        <div style="text-align:center"><a href="cadastro.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
+        <div class="otobut"><a href="cadastro.html" class="w3-btn">Editar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
