--- a/progresso.html
+++ b/progresso.html
@@ -11,7 +11,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -37,7 +37,7 @@
             <br>
             <h2>Frequência global</h2>
             <br>
-            <div class="pieContainer" style="background-color:#EFFBFB; width:100%;">
+            <div class="pieContainer grafi">
                 <div class="pieBackground">
                     <div id="pieSlice1" class="hold"><div class="pie"></div></div>
                     <div id="pieSlice2" class="hold"><div class="pie"></div></div>
