--- a/tarefas.html
+++ b/tarefas.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -35,7 +35,7 @@
         <!--corpo da home-->
         <div class="corpo">
             <br>
-            <h2 style="text-align:center;">Tarefas</h2>
+            <h2 class="h2c">Tarefas</h2>
             <br>
             <table class="tarefas">
                 <tbody>
@@ -53,12 +53,12 @@
             </table>
         </div>
         <br>
-        <div style="display:flex;text-align:center;">
+        <div class="pd">
             <div>
-                <a href="#" class="w3-btn" style="background-color:#084B60;color:white;">Deletar</a>
+                <a href="#" class="w3-btn butesc">Deletar</a>
             </div>
             <div>
-                <a href="newt.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Novo</a>
+                <a href="newt.html" class="w3-btn but cla">Novo</a>
             </div>
         </div>
     </div>
