--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <!--navbar-->
             <div class="topnav" id="myTopnav">
-                <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+                <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
                 <a href="index.html">Home</a>
                 <div class="dropdown">
                     <button class="dropbtn">Disciplinas 
@@ -54,7 +54,7 @@
                     </div></a>
                 </div>
             <div>
-                <div style="margin-left:25%; margin-right:25%"><a href="material.html"><div class="column" style="background-color:#81BEF7;width:100%;">
+                <div class="ultcomun"><a href="material.html"><div class="column">
                         <h2>Galeria</h2>
                         <p>Salve aqui as fotos de matérias e anotações</p>
                     </div></a></div>
@@ -63,16 +63,5 @@
         </div>
         </div>
         <script src="js/nav.js"></script>
-        <script>
-            if (navigator.serviceWorker.controller) {
-                console.log('[PWA Builder] active service worker found, no need to register')
-            } else {
-                navigator.serviceWorker.register('sw.js', {
-                    scope: './'
-                }).then(function(reg) {
-                    console.log('Service worker has been registered for scope:'+ reg.scope);
-                });
-            }
-        </script>
     </body>
 </html>
