--- a/mensagem.html
+++ b/mensagem.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -36,21 +36,19 @@
         <div class="corpo">
             <br><br>
             <div>
-                <div class="column discsigla" style="background-color:#084B60;text-align:left;height:270px;margin-left:25%; margin-right:25%">
-
+                <div class="column discsigla mn">
                         <img src="pict/icon.png" alt="" style= "width:55%;height:55%;text-align:center; margin-left:auto; margin-right:auto">
-
                     </div>
 
-                        <div style="text-align:center; margin-left:auto; margin-right:auto">
+                        <div class="gf">
                             <h3>Cadastro feito com sucesso!</h3>
                             <br><br>
                             <div style="display:flex;text-align:center;">
                                 <div>
-                                    <a href="index.html" class="w3-btn" style="background-color:#084B60;color:white;">Voltar à Home</a>
+                                    <a href="index.html" class="w3-btn butesc">Voltar à Home</a>
                                 </div>
                                 <div>
-                                    <a href="perfilp.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Ver meus dados</a>
+                                    <a href="perfilp.html" class="w3-btn butcla">Ver meus dados</a>
                                 </div>
                             </div>
                         </div>
