--- a/mt3.html
+++ b/mt3.html
@@ -13,7 +13,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -35,41 +35,41 @@
         </div>
         <!--corpo da home-->
         <div class="corpo w3-container">
-            <h2 style="text-align:center">Matemática 3</h2>
+            <h2 class="h2c">Matemática 3</h2>
 
             <h2>Frequência</h2>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge" style="width:74%">74%</div>
+                <div class="w3-container w3-blue w3-round-xlarge barmt3">74%</div>
             </div>
             <br>
             <h2>Dados</h2>
             <div>
-                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discnome">
                     <h3>Nome</h3>
                     <h4>Matemática 3</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsigla">
                     <h3>Sigla</h3>
                     <h4>Mat3</h4>
                 </div>
             </div>
             <div>
-                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discprof">
                     <h3>Professor(a)</h3>
                     <h4>Aline Macedo</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
+                <div class="column c1 discsala">
                     <h3>Sala</h3>
                     <h4>408</h4>
                 </div>
             </div>
         </div>
         <br>
-        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
+        <div class="butedit"><a href="matedit.html" class="w3-btn">Editar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
