--- a/newt.html
+++ b/newt.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -34,18 +34,18 @@
         </div>
         <!--corpo da home-->
         <div class="corpo">
-            <div style="margin-left:15%; margin-right:15%">
-                <div class="column" style="background-color:lightgray;width:100%;height:370px">
+            <div class="e">
+                <div class="column c3">
                     <label>Título</label>
                     <input type="text" placeholder="Título da tarefa">
                     <br><br>
                     <textarea name="descricao" id="desc" cols="30" rows="10"></textarea>
-                    <div style="display:flex;text-align:center;">
+                    <div class="txt">
                         <div>
-                            <a href="tarefas.html" class="w3-btn" style="background-color:#084B60;color:white;">Cancelar</a>
+                            <a href="tarefas.html" class="w3-btn butesc">Cancelar</a>
                         </div>
                         <div>
-                            <a href="tarefas.html" class="w3-btn" style="background-color:#81BEF7;float:right;">Salvar</a>
+                            <a href="tarefas.html" class="w3-btn butcla">Salvar</a>
                         </div>
                     </div>
                 </div>
