--- a/bd.html
+++ b/bd.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/circle.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Study Life</title>
 </head>
@@ -13,7 +12,7 @@
     <div class="container">
         <!--navbar-->
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
+            <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style= "width: 100%;" alt="logo"></a>
             <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">Disciplinas 
@@ -35,41 +34,41 @@
         </div>
         <!--corpo da home-->
         <div class="corpo w3-container">
-            <h2>Banco de Dados</h2>
+            <h2 style="text-align:center;font-family: sans-serif;">Banco de Dados</h2>
 
             <h2>Frequência</h2>
             <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-container w3-blue w3-round-xlarge barbd">65%</div>
+                <div class="w3-container w3-blue w3-round-xlarge" style="width:65%">65%</div>
             </div>
             <br>
             <h2>Dados</h2>
             <div>
-                <div class="column discnome c1">
+                <div class="column discnome" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Nome</h3>
                     <h4>Banco de Dados</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsigla c1">
+                <div class="column discsigla" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Sigla</h3>
                     <h4>BD</h4>
                 </div>
             </div>
             <div>
-                <div class="column discprof c1">
+                <div class="column discprof" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Professor(a)</h3>
                     <h4>Tiago Moraes</h4>
                 </div>
             </div>
             <div>
-                <div class="column discsala c1">
+                <div class="column discsala" style="background-color:lightgray;width:100%;text-align:left;height:120px;">
                     <h3>Sala</h3>
                     <h4>Lab 6</h4>
                 </div>
             </div>
         </div>
         <br>
-        <div class="butedit"><a href="matedit.html" class="w3-btn">Editar</a></div>
+        <div style="text-align:center"><a href="matedit.html" class="w3-btn" style="background-color:#81BEF7">Editar</a></div>
     </div>
     <script src="js/nav.js"></script>
 </body>
