--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <!--navbar-->
             <div class="topnav" id="myTopnav">
-                <a href="index.html" class="navbar-brand"><img src="pict/icon.png" class="logo" alt="logo"></a>
+                <a href="index.html" class="navbar-brand"><img src="pict/icon.png" style="width:100%" alt="logo"></a>
                 <a href="index.html">Home</a>
                 <div class="dropdown">
                     <button class="dropbtn">Disciplinas 
@@ -63,5 +63,16 @@
         </div>
         </div>
         <script src="js/nav.js"></script>
+        <script>if (navigator.serviceWorker.controller) {
+                console.log('[PWA Builder] active service worker found, no need to register')
+            } else {
+                navigator.serviceWorker.register('sw.js', {
+                    scope: './'
+                }).then(function(reg) {
+                    console.log('Service worker has been registered for scope:'+ reg.scope);
+                });
+            }
+            var elem = document.querySelector('.dropdown-trigger');
+            var instance = M.Dropdown.init(elem, options);</script>
     </body>
 </html>
